--- a/src/app/pages/account/login-page/login-page.component.html
+++ b/src/app/pages/account/login-page/login-page.component.html
@@ -4,25 +4,28 @@
             <span class="uk-icon" uk-icon="icon: logo-color-dark; ratio: 0.7"></span>
         </p>
 
-        <div class="uk-card uk-card-primary uk-card-body uk-box-shadow-small">
-            <h3 class="uk-card-tittle">Autentique-se</h3>
-            <div class="uk-margin">
-                <input class="uk-input uk-form-large" type="email" placeholder="E-mail">
+        <form [formGroup]="form">
+            <div class="uk-card uk-card-primary uk-card-body uk-box-shadow-small">
+                <h3 class="uk-card-tittle">Autentique-se</h3>
+                <div class="uk-margin">
+                    <input class="uk-input uk-form-large" formControlName="cpf" maxlength="11" type="text" placeholder="CPF">
+                </div>
+                <div class="uk-margin">
+                    <input class="uk-input uk-form-large" formControlName="password" type="password" placeholder="Senha">
+                </div>
+                <div class="uk-margin uk-text-center">
+                    <button class="uk-button uk-button-default" [disabled]="form.invalid" (click)="login()">Entrar</button>
+                </div>
             </div>
-            <div class="uk-margin">
-                <input class="uk-input uk-form-large" type="password" placeholder="Senha">
-            </div>
-            <div class="uk-margin uk-text-center">
-                <a href="/" class="uk-button uk-button-default">Entrar</a>
-            </div>
-        </div>
+        </form>
 
         <p class="uk-text-center">
-            <a href="/singup" class="uk-button uk-width-1-1 uk-button-large uk-button-primary uk-margin-small-bottom">
+            <a [routerLink]="['/singup']"
+            class="uk-button uk-width-1-1 uk-button-large uk-button-primary uk-margin-small-bottom">
                 Quero Me Cadastrar
             </a>
             <br>
-            <a href="/reset-password" class="uk-button uk-button-link">
+            <a [routerLink]="['/reset-password']" class="uk-button uk-button-link">
                 Esqueci Minha Senha
             </a>
         </p>
